<resources>
    <string name="app_name">Digital House Foods </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOG IN </string>
    <string name="register">REGISTER</string>
    <string name="empty_email"> Por favor, preencha o campo Email </string>
    <string name="empty_password"> Por favor, preencha o campo Password </string>
    <string name="name">Name</string>
    <string name="empty_name"> Por favor, preencha o campo Nome </string>
    <string name="equals_password"> As senhas não são iguais </string>
    <string name="or">Or</string>
    <string name="salada_com_molho_gengibre">Salada com molho Gengibre</string>
    <string name="pratos_principais">Pratos Principais</string>
    <string name="fecha_s_22_00">Fecha às 22:00</string>
    <string name="av_lavandisca_717_indian_polis_s_o_paulo">Av. Lavandisca, 717 - Indianópolis, São Paulo</string>
    <string name="tony_roma_s">Tony Roma\'s</string>
    <string name="pratos_principais">Pratos Principais</string>
</resources>